LAB1/aws_terraform/modules/security/main.tf
resource "aws_security_group" "public_instance" {
  name   = "public-instace-sg"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_workstation_ip]
  }


  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # tags = local.common_tags
  tags = {
    "Name" = "public-instace-sg"
  }
}

resource "aws_security_group" "private_instance" {
  name   = "private-instace-sg"
  vpc_id = var.vpc_id

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.public_instance.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  depends_on = [aws_security_group.public_instance]
  # tags = local.common_tags
  tags = {
    "Name" = "private-instace-sg"
  }
}
